# pinyin-to-ipa

./: .gitignore  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  LICENSE  MANIFEST.in  Pipfile  README.md  pyproject.toml
.github/workflows/: ci.yml  codecov.yml
res/: most-syllables-toneless.txt  most-syllables.txt  possible-syllables-tone3.txt
src/pinyin_to_ipa/: __init__.py  ipa2symb.py  ipa_symbols.py  transcription.py
src/pinyin_to_ipa_app/: __init__.py  app.py
src/pinyin_to_ipa_cli/: argparse_helper.py  cli.py  main.py
src/pinyin_to_ipa_hf/: __init__.py  app.py
src/pinyin_to_ipa_tests/transcription_py/: test_FINAL_MAPPING.py  test_INITIAL_MAPPING.py  test_get_finals.py  test_get_initials.py  test_get_tone.py  test_pinyin_to_ipa.py
src/pypinyin_tests/: helper.py  test_to_finals.py  test_to_initials.py
